pratique/2020-p1-f3-trem.out-comp.txt
2020-p1-f3-trem.cpp: In function ‘int dijkstra(int, int, int)’:
2020-p1-f3-trem.cpp:15:10: error: reference to ‘distance’ is ambiguous
   15 |     fill(distance, distance + MAX_STATIONS, INT_MAX);
      |          ^~~~~~~~
In file included from /usr/include/c++/11/bits/stl_algobase.h:66,
                 from /usr/include/c++/11/bits/char_traits.h:39,
                 from /usr/include/c++/11/ios:40,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from 2020-p1-f3-trem.cpp:2:
/usr/include/c++/11/bits/stl_iterator_base_funcs.h:138:5: note: candidates are: ‘template<class _InputIterator> constexpr typename std::iterator_traits< <template-parameter-1-1> >::difference_type std::distance(_InputIterator, _InputIterator)’
  138 |     distance(_InputIterator __first, _InputIterator __last)
      |     ^~~~~~~~
2020-p1-f3-trem.cpp:12:5: note:                 ‘int distance [10010]’
   12 | int distance[MAX_STATIONS];
      |     ^~~~~~~~
2020-p1-f3-trem.cpp:15:20: error: reference to ‘distance’ is ambiguous
   15 |     fill(distance, distance + MAX_STATIONS, INT_MAX);
      |                    ^~~~~~~~
In file included from /usr/include/c++/11/bits/stl_algobase.h:66,
                 from /usr/include/c++/11/bits/char_traits.h:39,
                 from /usr/include/c++/11/ios:40,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from 2020-p1-f3-trem.cpp:2:
/usr/include/c++/11/bits/stl_iterator_base_funcs.h:138:5: note: candidates are: ‘template<class _InputIterator> constexpr typename std::iterator_traits< <template-parameter-1-1> >::difference_type std::distance(_InputIterator, _InputIterator)’
  138 |     distance(_InputIterator __first, _InputIterator __last)
      |     ^~~~~~~~
2020-p1-f3-trem.cpp:12:5: note:                 ‘int distance [10010]’
   12 | int distance[MAX_STATIONS];
      |     ^~~~~~~~
2020-p1-f3-trem.cpp:15:45: error: ‘INT_MAX’ was not declared in this scope
   15 |     fill(distance, distance + MAX_STATIONS, INT_MAX);
      |                                             ^~~~~~~
2020-p1-f3-trem.cpp:5:1: note: ‘INT_MAX’ is defined in header ‘<climits>’; did you forget to ‘#include <climits>’?
    4 | #include <queue>
  +++ |+#include <climits>
    5 | 
2020-p1-f3-trem.cpp:16:5: error: reference to ‘distance’ is ambiguous
   16 |     distance[start] = 0;
      |     ^~~~~~~~
In file included from /usr/include/c++/11/bits/stl_algobase.h:66,
                 from /usr/include/c++/11/bits/char_traits.h:39,
                 from /usr/include/c++/11/ios:40,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from 2020-p1-f3-trem.cpp:2:
/usr/include/c++/11/bits/stl_iterator_base_funcs.h:138:5: note: candidates are: ‘template<class _InputIterator> constexpr typename std::iterator_traits< <template-parameter-1-1> >::difference_type std::distance(_InputIterator, _InputIterator)’
  138 |     distance(_InputIterator __first, _InputIterator __last)
      |     ^~~~~~~~
2020-p1-f3-trem.cpp:12:5: note:                 ‘int distance [10010]’
   12 | int distance[MAX_STATIONS];
      |     ^~~~~~~~
2020-p1-f3-trem.cpp:23:25: error: reference to ‘distance’ is ambiguous
   23 |         if (curr_dist > distance[curr_station]) continue;
      |                         ^~~~~~~~
In file included from /usr/include/c++/11/bits/stl_algobase.h:66,
                 from /usr/include/c++/11/bits/char_traits.h:39,
                 from /usr/include/c++/11/ios:40,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from 2020-p1-f3-trem.cpp:2:
/usr/include/c++/11/bits/stl_iterator_base_funcs.h:138:5: note: candidates are: ‘template<class _InputIterator> constexpr typename std::iterator_traits< <template-parameter-1-1> >::difference_type std::distance(_InputIterator, _InputIterator)’
  138 |     distance(_InputIterator __first, _InputIterator __last)
      |     ^~~~~~~~
2020-p1-f3-trem.cpp:12:5: note:                 ‘int distance [10010]’
   12 | int distance[MAX_STATIONS];
      |     ^~~~~~~~
2020-p1-f3-trem.cpp:26:30: error: reference to ‘distance’ is ambiguous
   26 |             if (next_dist <= distance[track.first] && next_dist <= train_length) {
      |                              ^~~~~~~~
In file included from /usr/include/c++/11/bits/stl_algobase.h:66,
                 from /usr/include/c++/11/bits/char_traits.h:39,
                 from /usr/include/c++/11/ios:40,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from 2020-p1-f3-trem.cpp:2:
/usr/include/c++/11/bits/stl_iterator_base_funcs.h:138:5: note: candidates are: ‘template<class _InputIterator> constexpr typename std::iterator_traits< <template-parameter-1-1> >::difference_type std::distance(_InputIterator, _InputIterator)’
  138 |     distance(_InputIterator __first, _InputIterator __last)
      |     ^~~~~~~~
2020-p1-f3-trem.cpp:12:5: note:                 ‘int distance [10010]’
   12 | int distance[MAX_STATIONS];
      |     ^~~~~~~~
2020-p1-f3-trem.cpp:27:17: error: reference to ‘distance’ is ambiguous
   27 |                 distance[track.first] = next_dist;
      |                 ^~~~~~~~
In file included from /usr/include/c++/11/bits/stl_algobase.h:66,
                 from /usr/include/c++/11/bits/char_traits.h:39,
                 from /usr/include/c++/11/ios:40,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from 2020-p1-f3-trem.cpp:2:
/usr/include/c++/11/bits/stl_iterator_base_funcs.h:138:5: note: candidates are: ‘template<class _InputIterator> constexpr typename std::iterator_traits< <template-parameter-1-1> >::difference_type std::distance(_InputIterator, _InputIterator)’
  138 |     distance(_InputIterator __first, _InputIterator __last)
      |     ^~~~~~~~
2020-p1-f3-trem.cpp:12:5: note:                 ‘int distance [10010]’
   12 | int distance[MAX_STATIONS];
      |     ^~~~~~~~
2020-p1-f3-trem.cpp:32:12: error: reference to ‘distance’ is ambiguous
   32 |     return distance[end] == INT_MAX ? -1 : distance[end];
      |            ^~~~~~~~
In file included from /usr/include/c++/11/bits/stl_algobase.h:66,
                 from /usr/include/c++/11/bits/char_traits.h:39,
                 from /usr/include/c++/11/ios:40,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from 2020-p1-f3-trem.cpp:2:
/usr/include/c++/11/bits/stl_iterator_base_funcs.h:138:5: note: candidates are: ‘template<class _InputIterator> constexpr typename std::iterator_traits< <template-parameter-1-1> >::difference_type std::distance(_InputIterator, _InputIterator)’
  138 |     distance(_InputIterator __first, _InputIterator __last)
      |     ^~~~~~~~
2020-p1-f3-trem.cpp:12:5: note:                 ‘int distance [10010]’
   12 | int distance[MAX_STATIONS];
      |     ^~~~~~~~
2020-p1-f3-trem.cpp:32:44: error: reference to ‘distance’ is ambiguous
   32 |     return distance[end] == INT_MAX ? -1 : distance[end];
      |                                            ^~~~~~~~
In file included from /usr/include/c++/11/bits/stl_algobase.h:66,
                 from /usr/include/c++/11/bits/char_traits.h:39,
                 from /usr/include/c++/11/ios:40,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from 2020-p1-f3-trem.cpp:2:
/usr/include/c++/11/bits/stl_iterator_base_funcs.h:138:5: note: candidates are: ‘template<class _InputIterator> constexpr typename std::iterator_traits< <template-parameter-1-1> >::difference_type std::distance(_InputIterator, _InputIterator)’
  138 |     distance(_InputIterator __first, _InputIterator __last)
      |     ^~~~~~~~
2020-p1-f3-trem.cpp:12:5: note:                 ‘int distance [10010]’
   12 | int distance[MAX_STATIONS];
      |     ^~~~~~~~
